--- a/index.html
+++ b/index.html
@@ -3,14 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>profile-craft-website</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>Ogheneovo</title>
+    <meta name="author" content="Ogheneovo Segba" />
 
-    <meta property="og:title" content="profile-craft-website" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="Ogheneovo Segba" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@lovable_dev" />
